--- a/config/i18n/uk.yml
+++ b/config/i18n/uk.yml
@@ -11,4 +11,5 @@ q2:
     - "Щоденно"
     - "Кілька разів на тиждень"
     - "Рідко"
-thank_you: "Дякуємо за ваші відповіді! Обробляємо ваші рекомендації..."
+thank_you_answer: "Дякуємо за ваші відповіді! Обробляємо ваші рекомендації..."
+invalid_answer: "Будь ласка, оберіть один із запропонованих варіантів"
