--- a/config/i18n/en.yml
+++ b/config/i18n/en.yml
@@ -25,3 +25,4 @@ q4:
     - "Rarely"
 thank_you_answer: "Thank you for your answers! Processing your recommendations..."
 invalid_answer: "Please select one of the provided options."
+entry_message: "Hello! Please use the /start command to begin the music recommendation questionnaire. 🎵"
