--- a/config/i18n/uk.yml
+++ b/config/i18n/uk.yml
@@ -13,4 +13,5 @@ q2:
     - "Рідко"
 thank_you_answer: "Дякуємо за ваші відповіді! Обробляємо ваші рекомендації..."
 invalid_answer: "Будь ласка, оберіть один із запропонованих варіантів"
+rate_limit_message: "Забагато запитів. Спробуйте ще раз через {seconds} секунд"
 entry_message: "Привіт! Будь ласка, використайте команду /start, щоб розпочати опитування для музичних рекомендацій. 🎵"
